--- a/Practicas/P2/pedidos.html
+++ b/Practicas/P2/pedidos.html
@@ -22,6 +22,35 @@
             </ul>
         </section>
         <main>
+            <div>
+                <ul>
+                    <li>Título <em>El título del libro</em></li>
+                    <li>Autor <em>Pepito Pérez</em></li>
+                    <li>ISBN <em>xxx-xxx-xxx</em></li>
+                    <li>Editorial <em>EditaSL</em></li>
+                    <li>Año <em>1900</em></li>
+                </ul>
+                <p>Texto más o menos extenso con la sinopsis del libro. En esta
+                   parte se pondrá un pequeño resumen de unas líneas del libro
+                   que el cliente quiere para su pedido.</p>
+                <p>PRECIO <em>15 euros</em></p>
+                <img src="pedido.png" alt="pedido" width="100" height="100"/>
+            </div>
+
+            <form action="procesar.php" method="POST">
+                <p>Nombre y apellidos <input type="text" name="nomape"/></p>
+                <p>Dirección de envío <textarea name="direc"></textarea></p>
+                <p>Email <input type="text" name="email"/></p>
+                <p>Número de tarjeta <input type="text" name="tarjeta"/></p>
+                <p>Fecha de caducidad <input type="text" name="caducidad" maxlength="13"/></p>
+                <p>CVC <input type="text" name="cvc" maxlength="4"/></p>
+                <p>Marque si procede
+                    <input type="checkbox" name="opciones" value="condiciones"/> He leído y acepto las condiciones de compra
+                    <input type="checkbox" name="opciones" value="novedades"/> Deseo recibir información sobre novedades
+                    <input type="checkbox" name="opciones" value="regalo"/> Deseo el envío envuelto para regalo
+                </p>
+                <input type="submit" value="Hacer pedido"/>
+            </form>
         </main>
         <aside>
             <div>Más vendido
