Fixed tienda.html table.

--- a/Practicas/P2/tienda.html
+++ b/Practicas/P2/tienda.html
@@ -22,36 +22,36 @@
             </ul>
         </section>
         <main>
-            <section>
-                <h2>Granada</h2>
-                <div>
-                    <ul>
-                        <li>Dirección postal: C/Reyes Católicos, nº 4 (18001)</li>
-                        <li>Teléfono: 958123456</li>
-                        <li>Horario: 9:00-13:30 y 17:30-20:30</li>
-                    </ul>
-                    <img src="reyescat.jpg" alt="Tienda Granada" width="500" height="300"/>
-                </div>
-                <div>
-                    <ul>
-                        <li>Dirección postal: Avda. Dílar, nº 37 (18007)</li>
-                        <li>Teléfono: 958076543</li>
-                        <li>Horario: 9:30-13:30 y 17:00-20:45</li>
-                    </ul>
-                    <img src="avdilar.jpg" alt="Tienda Granada" width="500" height="300"/>
-                </div>
-            </section>
-            <section>
-                <h2>Málaga</h2>
-                <div>
-                    <ul>
-                        <li>Dirección postal: C/Marqués de Larios, nº 13 (29015)</li>
-                        <li>Teléfono: 928123476</li>
-                        <li>Horario: 9:30-13:30 y 17:30-20:30</li>
-                    </ul>
-                    <img src="marques.jpg" alt="Tienda Malaga" width="500" height="300"/>
-                </div>
-            </section>
+            <table border="1">
+                <caption>Tiendas</caption>
+                <tr>
+                    <th>Ciudad</th>
+                    <th>Dirección postal</th>
+                    <th>Teléfono</th>
+                    <th>Horario</th>
+                    <th>Foto</th>
+                </tr>
+                <tr>
+                    <td rowspan="2">Granada</td>
+                    <td>C/Reyes Católicos, nº 4 (18001)</td>
+                    <td>958123456</td>
+                    <td>9:00-13:30 y 17:30-20:30</td>
+                    <td><img src="reyescat.jpg" alt="Tienda Granada" width="300" height="175"/></td>
+                </tr>
+                <tr>
+                    <td>Avda. Dílar, nº 37 (18007)</td>
+                    <td>958076543</td>
+                    <td>9:30-13:30 y 17:00-20:45</td>
+                    <td><img src="avdilar.jpg" alt="Tienda Granada" width="300" height="175"/></td>
+                </tr>
+                <tr>
+                    <td>Málaga</td>
+                    <td>C/Marqués de Larios, nº 13 (29015)</td>
+                    <td>928123476</td>
+                    <td>9:30-13:30 y 17:30-20:30</td>
+                    <td><img src="marques.jpg" alt="Tienda Malaga" width="300" height="175"/></td>
+                </tr>
+            </table>
         </main>
         <aside>
             <div>Más vendido
