Finished index.html. Rendered social media pics.

--- a/Practicas/P3/index.html
+++ b/Practicas/P3/index.html
@@ -22,11 +22,12 @@
                 <li><a href="pedidos.html">Pedidos</a></li>
             </ul>
         </section>
-        <main>
+        <div id="centro"><main>
             <section>
                 <h2>Eventos en marzo</h2>
                 <ul>
-                    <li>
+                    <li id="martin">
+                        <img src="grrmartin.jpg" alt="GRRMartin"/>
                         <h3>Firma de libros: GEORGE R.R. MARTIN</h3>
                         <p>Próximamente contaremos con la participación
                            del autor de <em>Canción de hielo y fuego</em>
@@ -38,10 +39,9 @@
                             <li>Lugar: Reyes Católicos</li>
                             <li>Hora: de 17:30 a 19:30</li>
                         </ul>
-
-                        <img src="grrmartin.jpg" alt="GRRMartin"/>
                     </li>
-                    <li>
+                    <li id="cielo">
+                        <img src="publicacion.jpg" alt="Portada del libro" width="250" height="350"/>
                         <h3>Publicación de la primera edición de <em>El cielo de piedra</em>
                             de N.K.Jemisin</h3>
                         <p>Por fin llega el esperado libro de fantasía, la continuación
@@ -52,10 +52,9 @@
                             <li>Fecha: disponible a partir del 4 de abril</li>
                             <li>Lugar: en todas las tiendas <em>El lector de libros</em></li>
                         </ul>
-
-                        <img src="publicacion.jpg" alt="Portada del libro"/>
                     </li>
-                    <li>
+                    <li id="relatos">
+                        <img src="premio.jpg" alt="Concurso de relatos"width="250" height="350"/>
                         <h3>Concurso de relatos</h3>
                         <p>Llega la V edición del concurso de relatos para jóvenes
                            de entre 12 y 18 años. Esta actividad ayuda en el
@@ -66,8 +65,6 @@
                             <li>Lugar: entrega tu relato en Reyes Católicos</li>
                             <li>Hora: recibiremos relatos solo de 9:00 a 13:30</li>
                         </ul>
-
-                        <img src="premio.jpg" alt="Concurso de relatos"/>
                     </li>
                 </ul>
             </section>
@@ -94,17 +91,17 @@
                     <li>Fantasía</li>
                 </ol>
             </div>
-        </aside>
+        </aside></div>
         <footer id="pie">
             <div>
                 <ul>
-                    <li class="ciudad">Granada</li>
+                    <li class="ciudad"><strong>Granada</strong></li>
                     <li><ul>
                             <li>Reyes Católicos (958123456)</li>
                             <li>Avda Dilar (958076543)</li>
                         </ul>
                     </li>
-                    <li class="ciudad">Málaga</li>
+                    <li class="ciudad"><strong>Málaga</strong></li>
                     <li><ul>
                             <li>Marqués de Larios (928123476)</li>
                         </ul>
