Finished library modeling with CSS.

--- a/Practicas/P3/catalogo.html
+++ b/Practicas/P3/catalogo.html
@@ -5,14 +5,15 @@
         <meta charset="utf-8"/>
         <meta name="author" content="Nazaret Román Guerrero"/>
         <title>El Lector de Libros</title>
+        <link rel="stylesheet" href="libreria_estilo.css">
     </head>
     <body>
-        <header>
+        <header id="cabecera">
             <img src="logo.jpg" alt="Logo librería"/>
             <h1>El Lector de Libros</h1>
             <p>Contando historias desde hace 100 años</p>
         </header>
-        <section>
+        <section id="paginas_indice">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="catalogo.html">Catálogo</a></li>
@@ -21,54 +22,54 @@
                 <li><a href="pedidos.html">Pedidos</a></li>
             </ul>
         </section>
-        <main>
+        <div id="centro"><main id="catal_libros">
             <section>
+                <img src="libro1.jpg" alt="Delirium" width="200" height="300"/>
                 <h2><strong>Delirium</strong></h2>
                 <p>Lauren Oliver</p>
                 <p>Harper Collins</p>
                 <form>
                     <input type="submit" value="Comprar"/>
                 </form>
-                <img src="libro1.jpg" alt="Delirium" width="200" height="300"/>
             </section>
             <section>
-                <h2><strong>Las aventuras de Calpurnia Tate</strong></h2>
+                <img src="libro2.jpg" alt="Calpurnia" width="200" height="300"/>
+                <h2><strong>Calpurnia Tate</strong></h2>
                 <p>Jacqueline Kelly</p>
                 <p>Roca Editorial</p>
                 <form>
                     <input type="submit" value="Comprar"/>
                 </form>
-                <img src="libro2.jpg" alt="Calpurnia" width="200" height="300"/>
             </section>
             <section>
+                <img src="libro3.jpg" alt="Gothic doll" width="200" height="300"/>
                 <h2><strong>Gothic doll</strong></h2>
                 <p>Lorena Amkie</p>
                 <p>Ediciones B</p>
                 <form>
                     <input type="submit" value="Comprar"/>
                 </form>
-                <img src="libro3.jpg" alt="Gothic doll" width="200" height="300"/>
             </section>
             <section>
-                <h2><strong>Emily the strange: los días perdidos</strong></h2>
+                <img src="libro4.jpg" alt="Emily" width="200" height="300"/>
+                <h2><strong>Emily the strange</strong></h2>
                 <p>Rob Reger</p>
                 <p>SM</p>
                 <form>
                     <input type="submit" value="Comprar"/>
                 </form>
-                <img src="libro4.jpg" alt="Emily" width="200" height="300"/>
             </section>
             <section>
+                <img src="libro5.jpg" alt="Erebos" width="200" height="300"/>
                 <h2><strong>Erebos</strong></h2>
                 <p>Ursula Poznanski</p>
                 <p>Alfaguara</p>
                 <form>
                     <input type="submit" value="Comprar"/>
                 </form>
-                <img src="libro5.jpg" alt="Erebos" width="200" height="300"/>
             </section>
         </main>
-        <aside>
+        <aside id="rankings">
             <div>Más vendido
                 <ol>
                     <li>Memorias de Idhún: la Resistencia</li>
@@ -90,32 +91,32 @@
                     <li>Fantasía</li>
                 </ol>
             </div>
-        </aside>
-        <footer>
+        </aside></div>
+        <footer id="pie">
             <div>
                 <ul>
-                    <li>Granada</li>
+                    <li class="ciudad"><strong>Granada</strong></li>
                     <li><ul>
                             <li>Reyes Católicos (958123456)</li>
                             <li>Avda Dilar (958076543)</li>
                         </ul>
                     </li>
-                    <li>Málaga</li>
+                    <li class="ciudad"><strong>Málaga</strong></li>
                     <li><ul>
                             <li>Marqués de Larios (928123476)</li>
                         </ul>
                     </li>
                 </ul>
             </div>
-            <div>
-                <img src="mail.png" alt="Mail" width="50" height="50"/>
+            <div id="redes">
+                <img id="mail" src="mail.png" alt="Mail" width="50" height="50"/>
                 <p>lectordelibros@gmail.com</p>
                 <img src="twitter.png" alt="Twitter" width="50" height="50"/>
                 <img src="facebook.png" alt="Facebook" width="50" height="50"/>
                 <img src="pinterest.png" alt="Pinterest" width="50" height="50"/>
                 <img src="wifi.png" alt="Wifi" width="50" height="50"/>
             </div>
-            <div>
+            <div id="enlaces_externos">
                 <ul>
                     <li><a href="#empresa">La empresa</a></li>
                     <li><a href="#politica">Política de envío</a></li>
