--- a/Practicas/P3/index.html
+++ b/Practicas/P3/index.html
@@ -22,7 +22,7 @@
                 <li><a href="pedidos.html">Pedidos</a></li>
             </ul>
         </section>
-        <div id="centro"><main>
+        <div id="centro"><main id="eventos">
             <section>
                 <h2>Eventos en marzo</h2>
                 <ul>
