--- a/Practicas/P3/tienda.html
+++ b/Practicas/P3/tienda.html
@@ -5,14 +5,15 @@
         <meta charset="utf-8"/>
         <meta name="author" content="Nazaret Román Guerrero"/>
         <title>El Lector de Libros</title>
+        <link rel="stylesheet" href="libreria_estilo.css">
     </head>
     <body>
-        <header>
+        <header id="cabecera">
             <img src="logo.jpg" alt="Logo librería"/>
             <h1>El Lector de Libros</h1>
             <p>Contando historias desde hace 100 años</p>
         </header>
-        <section>
+        <section id="paginas_indice">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="catalogo.html">Catálogo</a></li>
@@ -21,7 +22,7 @@
                 <li><a href="pedidos.html">Pedidos</a></li>
             </ul>
         </section>
-        <main>
+        <div id="centro"><main id="tienda">
             <table border="1">
                 <caption>Tiendas</caption>
                 <tr>
@@ -53,7 +54,7 @@
                 </tr>
             </table>
         </main>
-        <aside>
+        <aside id="rankings">
             <div>Más vendido
                 <ol>
                     <li>Memorias de Idhún: la Resistencia</li>
@@ -75,32 +76,32 @@
                     <li>Fantasía</li>
                 </ol>
             </div>
-        </aside>
-        <footer>
+        </aside></div>
+        <footer id="pie">
             <div>
                 <ul>
-                    <li>Granada</li>
+                    <li class="ciudad"><strong>Granada</strong></li>
                     <li><ul>
                             <li>Reyes Católicos (958123456)</li>
                             <li>Avda Dilar (958076543)</li>
                         </ul>
                     </li>
-                    <li>Málaga</li>
+                    <li class="ciudad"><strong>Málaga</strong></li>
                     <li><ul>
                             <li>Marqués de Larios (928123476)</li>
                         </ul>
                     </li>
                 </ul>
             </div>
-            <div>
-                <img src="mail.png" alt="Mail" width="50" height="50"/>
+            <div id="redes">
+                <img id="mail" src="mail.png" alt="Mail" width="50" height="50"/>
                 <p>lectordelibros@gmail.com</p>
                 <img src="twitter.png" alt="Twitter" width="50" height="50"/>
                 <img src="facebook.png" alt="Facebook" width="50" height="50"/>
                 <img src="pinterest.png" alt="Pinterest" width="50" height="50"/>
                 <img src="wifi.png" alt="Wifi" width="50" height="50"/>
             </div>
-            <div>
+            <div id="enlaces_externos">
                 <ul>
                     <li><a href="#empresa">La empresa</a></li>
                     <li><a href="#politica">Política de envío</a></li>
