Changed visual style.

--- a/Practicas/P3/busqueda.html
+++ b/Practicas/P3/busqueda.html
@@ -37,11 +37,11 @@
                     <option>Terror</option>
                     <option>Drama</option>
                 </select></p>
-                <p>Encuadernación
-                    <input type="radio" name="encuaderna" value="dura" checked/>Tapa dura
-                    <input type="radio" name="encuaderna" value="blanda" checked/>Tapa blanda
-                    <input type="radio" name="encuaderna" value="cualquiera" checked/>Cualquiera
-                </p>
+                <div><p>Encuadernación</p>
+                    <label><input type="radio" name="encuaderna" value="dura" checked/>Tapa dura</label>
+                    <label><input type="radio" name="encuaderna" value="blanda" checked/>Tapa blanda</label>
+                    <label><input type="radio" name="encuaderna" value="cualquiera" checked/>Cualquiera</label>
+                </div>
                 <input id="enviar_bus" type="submit" value="Buscar"/>
             </form>
         </main>
