Added all forms and css.

--- a/Practicas/P4/header.html
+++ b/Practicas/P4/header.html
@@ -1,5 +1,5 @@
 <header id="cabecera">
-    <img src="logo.jpg" alt="Logo librería"/>
+    <img src="logo.png" alt="Logo librería"/>
     <h1>El Lector de Libros</h1>
     <p>Contando historias desde hace 100 años</p>
 </header>
