--- a/Practicas/P4/tienda.html
+++ b/Practicas/P4/tienda.html
@@ -1,4 +1,4 @@
-<div id="centro"><main id="tienda">
+<div class="centro"><main class="tienda">
     <table border="1">
         <caption>Tiendas</caption>
         <tr>
